syntax = "proto3";

option go_package = "./grpc/pb";

message UserPartner {
    string id = 11;
    string user_id = 1;
    string partner_id = 3;
    string alias_user_id = 5;
    string phone = 7;
    int64 created = 10;
    int64 updated_at = 12;
}

message UserPartnerRequest {
    string user_id = 1;
    string phone = 2;
    int32 limit = 3;
}

message InsertRequest {
    UserPartner user = 1;
}

message InsertResponse {
    int32 statusCode = 1;
    string message = 2;
}

message ReadRequest {}

message ReadResponse {
    repeated UserPartner user = 1;
}

message UpdateRequest {
    UserPartner newUser = 1;
}

message UpdateResponse {
    int32 statusCode = 1;
    string message = 2;
}

message DeleteRequest {
    UserPartner user = 1;
}

message DeleteResponse {
    int32 statusCode = 1;
    string message = 2;
}

service UserService {
    rpc Insert(InsertRequest) returns (InsertResponse) {}
    rpc Read(ReadRequest) returns (ReadResponse) {}
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}